--- a/23-figure3-S4-S5.Rmd
+++ b/23-figure3-S4-S5.Rmd
@@ -9,6 +9,9 @@ editor_options:
 library(RColorBrewer)
 library(tidyverse) 
 library(ggalluvial)
+library(ggplot2)
+library(ggpolypath)
+
 if (interactive()) load("tcr_objects.Rdata")
 
 figures_path <- file.path("figures", "alluvials")
@@ -86,7 +89,8 @@ make_alluvial_dataset <- function(tcr_data, tcr_sample_metadata, tissue_metadata
       theme(
         axis.text.y = element_text(size = 15, color = "black"),
         legend.position = "right",
-        axis.text.x = element_text(size = 15, angle = -30, color = "black", hjust = 0)
+        axis.text.x = element_text(size = 15, angle = -30, color = "black", hjust = 0),
+        plot.margin = margin(r=80) #
       ) +
       scale_y_continuous(expand = c(0,0)) 
   
@@ -124,10 +128,17 @@ plots_to_make <- list(
   
 for (i in seq_along(plots_to_make)){
   thing = plots_to_make[[i]]
+  thistcr_sample_metadata <- tcr_sample_metadata
   
-  thisdata <- make_alluvial_dataset(tcr_raw, tcr_sample_metadata, ref_org=thing["org"],
-                                    ref_tissue = thing["ref_tissue"], tissue_metadata = tissue_annotations,
-                                    ref_pt=names(plots_to_make)[i], topn=as.numeric(thing["topn"]))
+  # do any patient-specific filtering here
+  if(names(plots_to_make)[i] == "Patient D"){
+    thistcr_sample_metadata <- thistcr_sample_metadata %>% 
+      filter(!tissue %in% c("kidney,", "heart", "autopsy_marrow") )
+  }
+  thisdata <- make_alluvial_dataset(
+    tcr_raw, tcr_sample_metadata=thistcr_sample_metadata, ref_org=thing["org"],
+    ref_tissue = thing["ref_tissue"], tissue_metadata = tissue_annotations,
+    ref_pt=names(plots_to_make)[i], topn=as.numeric(thing["topn"]))
   
   
   ggsave(plot=thisdata$p_ ,height=5,width=10,dpi=200, 
@@ -183,7 +194,7 @@ for (pat in tcr_sample_metadata %>% filter(org == "Human") %>% pull(indv_label) 
   
   # Patient A's donor sample consists almost entirely of singltons. We do not plot that for this sample
   if (pat == "Patient A"){
-    thisdata  <- thisdata %>% filter(tissue != "graft_blood") 
+    thisdata$top_n_data  <- thisdata$top_n_data %>% filter(tissue != "graft_blood") 
   }
 
   #n_distinct(thisdata$top_n_data$rearrangement)
