--- a/38-figureS1x-UC-TCRs.Rmd
+++ b/38-figureS1x-UC-TCRs.Rmd
@@ -1,3 +1,8 @@
+---
+output: html_document
+editor_options: 
+  chunk_output_type: console
+---
 ```{r setup-38, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, fig.width=10, fig.height=7) 
 library(tidyverse) 
@@ -22,7 +27,7 @@ Data were downloaded from https://clients.adaptivebiotech.com/pub/werner-2018-cl
 TCR JSDs were calculated similar to the description in 00-preprocess-TCR:
 ```
 bash scripts/get_file_pairs.sh ./data/UC_raw_TCR_data/ > UC_file_pairs.tsv
-parallel -a UC_file_pairs.tsv --bar --progress --colsep "\t" ~/miniconda3/envs/pd/bin/python scripts/AB-correlations.py {1} {2} > data/2022-09-06-UC-tcr-correlations.tsv
+parallel -a UC_file_pairs.tsv --bar --progress --colsep "\t" ~/miniconda3/envs/pd/bin/python scripts/AB-correlations.py {1} {2} > data/2022-10-12-UC-tcr-correlations.tsv
 ```
 
 ## recreating figure 5b
@@ -34,24 +39,16 @@ uc_metadata = data.frame("raw"=gsub(".tsv", "", dir("data/UC_raw_TCR_data/", pat
          indv_label = gsub("(.*)?_.*?_(.*)", "\\1", raw)
   )
 
-nonrectal_lower_GI <- c("colon", "ileum",  "mid_colon", "ascending_colon", "colon_ascending","descending_colon", "jejunum", "transverse_colon", "L_colon",  "left_colon", "right_colon", "terminalileum"  )  
-nonrectal_lower_GI <- tissue_annotations[tissue_annotations$S2_uc_group == "Large Intestine", "tissue"]
-upper_GI <- c("stomach", "esophagus", "duodenum", "small_intestine" )  
-upper_GI <- tissue_annotations[tissue_annotations$S2_uc_group == "Small Intestine", "tissue"]
-
+# # nonrectal_lower_GI <- c("colon", "ileum",  "mid_colon", "ascending_colon",  "colon_ascending","descending_colon", "jejunum", "transverse_colon", "L_colon",  "left_colon", "right_colon", "terminalileum"  )  
+# nonrectal_lower_GI <- tissue_annotations[tissue_annotations$S2_uc_group == "Large Intestine", "tissue"]
+# upper_GI <- c("stomach", "esophagus", "duodenum", "small_intestine" )  
+# upper_GI <- tissue_annotations[tissue_annotations$S2_uc_group == "Small Intestine", "tissue"]
+# 
 
 # we change ascending_colon to colon_ascending to make it sort later alphabetically :/ 
 
-uc_corrs_raw <- read.csv(sep = "\t", "data/2022-09-06-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tthreshold\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan"))  %>% filter(JSD != 0) %>% arrange(fileA, fileB)
-uc_corrs_filtered1k <- read.csv(sep = "\t", "data/2022-09-21-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tNA\tthreshold\tnorm_sizeA\tnorm_sizeB\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan")) %>% filter(JSD != 0) %>%  arrange(fileA, fileB)
-tmpdf <- data.frame(raw=uc_corrs_raw$JSD, filtered1k=uc_corrs_filtered1k$JSD)
-tmpdf$raw - tmpdf$filtered1k
-ggplot(tmpdf, aes(x=raw, y=filtered1k) ) + geom_point()
-
-
-
 thismetric = "JSD"
-msk_uc_corrs <- read.csv(sep = "\t", "data/2022-09-21-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tthreshold\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan")) %>%
+msk_uc_corrs <- read.csv(sep = "\t", "data/2022-10-12-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tthreshold\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan")) %>%
     left_join(uc_metadata, by=c("fileA"="raw")) %>% 
     left_join(uc_metadata, by=c("fileB"="raw")) %>% 
   select(indv_label.x, indv_label.y, tissue.x, tissue.y, disease.x, all_of(thismetric)) %>%
@@ -61,20 +58,14 @@ msk_uc_corrs <- read.csv(sep = "\t", "data/2022-09-21-UC-tcr-correlations.tsv", 
       mutate(disease.x = gvhd.x, cohort="MSK") %>% 
       select(indv_label.x, indv_label.y, disease.x, tissue.x, tissue.y,  all_of(thismetric), cohort)
   )%>%
-  filter(tissue.x %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI),tissue.y %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI) ) %>% 
-  filter(tissue.x %in% c("blood", "autopsy_blood") | tissue.y %in% c("blood", "autopsy_blood")) %>% 
+  filter(tissue.x %in% c("blood", "autopsy_blood") ) %>% 
+  # filter(tissue.x %in% c("blood", "autopsy_blood") | tissue.y %in% c("blood", "autopsy_blood")) %>% 
  filter(indv_label.x == indv_label.y, tissue.x != tissue.y)  %>% 
-  mutate(
-    tissue.x = ifelse(tissue.x == "ascending_colon", "colon_ascending", tissue.x),
-    tissue.y = ifelse(tissue.y == "ascending_colon", "colon_ascending", tissue.y),
-    ) %>% 
-  mutate(tissueA = pmin(tissue.x, tissue.y),
-         tissueB = pmax(tissue.x, tissue.y)) %>% 
+  inner_join(tissue_annotations %>% select(S2_uc_group, tissue) %>% filter(S2_uc_group != "") %>% distinct(), by=c("tissue.y" = "tissue")) %>% 
   mutate(xgroup=case_when(
-    tissueB  == "rectum" & cohort == "MSK"  ~ "GvHD\n(rectum)",
-    tissueB %in% nonrectal_lower_GI ~ "GvHD\n(non-rectal lower GI)",
-    tissueB %in% upper_GI ~ "GvHD\n(Upper GI)",
-    TRUE ~ paste0("UC - ", disease.x )
+    cohort == "UC" ~  paste0("UC - ", disease.x),
+    cohort == "MSK" ~  paste0("GvHD - ", S2_uc_group),
+    TRUE ~ "Issue"
   ))
 
 theselimits = sort(unique(msk_uc_corrs$xgroup))
@@ -82,7 +73,7 @@ theselimits <- theselimits[c(4,5,2,1,3)]
 
 ggplot(msk_uc_corrs%>%
          rename(metic= all_of(thismetric)) %>%
-         select(indv_label.x, xgroup, metic, tissueA, tissueB) %>% distinct() %>% 
+         select(indv_label.x, xgroup, metic, tissue.x, tissue.y) %>% distinct() %>% 
          filter(!indv_label.x %in% c("P01", "P08")), aes(x=xgroup, y=metic)) + geom_boxplot(outlier.colour = NA, color="grey") +  
   geom_jitter(width = .1, height = 0) +
   scale_x_discrete(limits=theselimits) + theme_classic() +
@@ -90,8 +81,7 @@ ggplot(msk_uc_corrs%>%
   labs(
     title = paste("Blood-tissue pair", thismetric),
     x="",
-    y=thismetric,
-    caption=paste0("groups:\n  - Non-rectal lower GI includes ", paste(nonrectal_lower_GI, collapse=",")))
+    y=thismetric)
 
 
 
@@ -100,33 +90,33 @@ ggplot(msk_uc_corrs%>%
 
 
 ```{r}
-msk_uc_corrs <- read.csv(sep = "\t", "data/2022-09-06-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan")) %>%
-    left_join(uc_metadata, by=c("fileA"="raw")) %>% 
-    left_join(uc_metadata, by=c("fileB"="raw")) %>% 
-  select(indv_label.x, indv_label.y, tissue.x, tissue.y, disease.x, all_of(thismetric)) %>%
-  mutate(cohort = "UC") %>% 
-  bind_rows(
-    tcr_corrs_anno %>%   filter(org.x == "Human", org.y=="Human") %>% 
-      mutate(disease.x = gvhd.x, cohort="MSK") %>% 
-      select(indv_label.x, indv_label.y, disease.x, tissue.x, tissue.y,  all_of(thismetric), cohort)
-  )%>%
-  filter(tissue.x %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI),tissue.y %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI) ) %>% 
-  filter(tissue.x %in% c("blood", "autopsy_blood") | tissue.y %in% c("blood", "autopsy_blood")) %>% 
- filter(indv_label.x == indv_label.y, tissue.x != tissue.y)  %>% 
-  mutate(
-    tissue.x = ifelse(tissue.x == "ascending_colon", "colon_ascending", tissue.x),
-    tissue.y = ifelse(tissue.y == "ascending_colon", "colon_ascending", tissue.y),
-    ) %>% 
-  mutate(tissueA = pmin(tissue.x, tissue.y),
-         tissueB = pmax(tissue.x, tissue.y)) %>% 
-  mutate(xgroup=case_when(
-    tissueB  == "rectum" & cohort == "MSK"  ~ "GvHD\n(rectum)",
-    tissueB %in% nonrectal_lower_GI ~ "GvHD\n(non-rectal lower GI)",
-    tissueB %in% upper_GI ~ "GvHD\n(Upper GI)",
-    TRUE ~ paste0("UC - ", disease.x )
-  ))
-
-
+# msk_uc_corrs <- read.csv(sep = "\t", "data/2022-10-12-UC-tcr-correlations.tsv", header=FALSE, col.names = strsplit("fileA\tfileB\tsizeA\tsizeB\tnorm_sizeA\tnorm_sizeB\tJSD\tjsd_nt_norm\tjsd_aa_raw\tjsd_aa_norm\tmorisita_nt_raw\toverlapping_clones\toverlapping_aa", split = "\t")[[1]], na.strings = c("nan")) %>%
+#     left_join(uc_metadata, by=c("fileA"="raw")) %>% 
+#     left_join(uc_metadata, by=c("fileB"="raw")) %>% 
+#   select(indv_label.x, indv_label.y, tissue.x, tissue.y, disease.x, all_of(thismetric)) %>%
+#   mutate(cohort = "UC") %>% 
+#   bind_rows(
+#     tcr_corrs_anno %>%   filter(org.x == "Human", org.y=="Human") %>% 
+#       mutate(disease.x = gvhd.x, cohort="MSK") %>% 
+#       select(indv_label.x, indv_label.y, disease.x, tissue.x, tissue.y,  all_of(thismetric), cohort)
+#   )%>%
+#   filter(tissue.x %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI),tissue.y %in% c("blood", "autopsy_blood", "rectum", nonrectal_lower_GI, upper_GI) ) %>% 
+#   filter(tissue.x %in% c("blood", "autopsy_blood") | tissue.y %in% c("blood", "autopsy_blood")) %>% 
+#  filter(indv_label.x == indv_label.y, tissue.x != tissue.y)  %>% 
+#   mutate(
+#     tissue.x = ifelse(tissue.x == "ascending_colon", "colon_ascending", tissue.x),
+#     tissue.y = ifelse(tissue.y == "ascending_colon", "colon_ascending", tissue.y),
+#     ) %>% 
+#   mutate(tissueA = pmin(tissue.x, tissue.y),
+#          tissueB = pmax(tissue.x, tissue.y)) %>% 
+#   mutate(xgroup=case_when(
+#     tissueB  == "rectum" & cohort == "MSK"  ~ "GvHD\n(rectum)",
+#     tissueB %in% nonrectal_lower_GI ~ "GvHD\n(non-rectal lower GI)",
+#     tissueB %in% upper_GI ~ "GvHD\n(Upper GI)",
+#     TRUE ~ paste0("UC - ", disease.x )
+#   ))
+# 
+# 
 
 
 
