--- a/30-figureS2.Rmd
+++ b/30-figureS2.Rmd
@@ -11,15 +11,18 @@ analysis of divesity metrics across clinical variables: these are the plots for 
 
 ```{R 30-figureS2-1 }
 if (interactive()) load("./tcr_objects.Rdata")
+S2_figs_dir <- file.path("figures", "S2")
+dir.create(S2_figs_dir, showWarnings = FALSE)
+figures_path <- file.path("figures", "S2")
+
 s2_theme <- theme_classic() + theme(
   axis.text=element_text(size=15, color = "black"),
   axis.text.y=element_text(size=12, color = "black"),
   legend.text = element_text(size = 12, color = "black"), legend.title = element_text(size = 15, color = "black"), axis.title = element_text(size = 15, color = "black", face = "bold"),
   axis.text.x = element_text(size = 12, hjust = 0, color = "black", angle = -30))
-#TODO check groupings
-#setwd("/Volumes/Susan/Human GVHD/Summary analyses")
-#diversity = read.csv("diversitystats.csv")
-#diversity %>% select(subject, allograft, `CMV reactivation`, `chronic GVHD`, `GVHD_severity`) %>% distinct() %>% write.csv("tmpdiversity.csv")
+
+
+
 
 s2diversity = tcr_sample_metadata %>% 
   select(sample_name : indv_tissue_label, -sample_amount_ng) %>% 
@@ -34,13 +37,13 @@ GI = s2diversity %>%
   filter(!tissue_label %in% c("PBSCs", "Bone Marrow", "pre-tx PBMCs", "Heart", "Kidney", "mLN")) %>%
   filter(tissue != "Graft/Blood") %>% 
   filter(org=="Human") %>% 
-  filter("" != S2_uc_group)
+  filter("" != S2_group)
 GI_GVHD = GI %>%
    filter(CMV.reactivation != "n/a")
 
 
 #these are the plots for clonality
-basep <- ggplot(GI, aes(x=reorder(S2_uc_group, anatomic_order)))
+basep <- ggplot(GI, aes(x=reorder(S2_group, anatomic_order)))
 
 #this plot colors by allograft source
 clonality_graft = basep  +
@@ -60,7 +63,7 @@ S2_A = clonality_graft + slope_graft + plot_layout(guides = "collect")
 
 
 #this plot colors by CMV
-cc <- ggplot(GI_GVHD, aes(x=reorder(S2_uc_group, anatomic_order)))
+cc <- ggplot(GI_GVHD, aes(x=reorder(S2_group, anatomic_order)))
 
 clonality_CMV = cc + 
   geom_point(aes(y=clonality, fill = CMV.reactivation),size = 4,  stroke = 2, alpha = .8, position = jitter2, shape=21) +
@@ -78,26 +81,21 @@ S2_B = clonality_CMV + slope_CMV + plot_layout(guides = "collect")
 clonality_GVHD = cc + 
   geom_point(aes(y=clonality, fill = GVHD_severity), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) +
  s2_theme +
-  xlab("") + scale_fill_brewer(palette = "BuPu")
+  xlab("") + scale_fill_brewer(palette = "Set2")
 
 #this plot colors by grade of GVHD peri-autopsy (acute GVHD)
 slope_GVHD = cc + 
   geom_point(aes(y=slope, fill = GVHD_severity), size = 4, stroke = 2, alpha = .8, position = jitter2, shape=21) +
   s2_theme +
-  xlab("") + scale_fill_brewer(palette = "BuPu")
+  xlab("") + scale_fill_brewer(palette = "Set2")
 
 S2_C = clonality_GVHD + slope_GVHD + plot_layout(guides = "collect")
 
 
 
-ggsave(plot=S2_A, height=5,width=14,dpi=200,
-       filename="S2A_by_graft.pdf",
-       useDingbats=FALSE)
-ggsave(plot=S2_B, height=5,width=14,dpi=200,
-       filename="S2B_by_CMV.pdf",
-       useDingbats=FALSE)
-ggsave(plot=S2_C, height=5,width=14,dpi=200,
-       filename="S2C_by_GVHD.pdf",
-       useDingbats=FALSE)
+ggsave(plot=S2_A ,height=5,width=14, filename=file.path(figures_path, "S2A_by_graft.pdf"))
+ggsave(plot=S2_B ,height=5,width=14, filename=file.path(figures_path, "S2A_by_CMV.pdf"))
+ggsave(plot=S2_C ,height=5,width=14, filename=file.path(figures_path, "S2A_by_GVHD.pdf"))
+
 
 ```
