--- a/39-figureS11.Rmd
+++ b/39-figureS11.Rmd
@@ -94,23 +94,22 @@ pt_comp_df_all <- tcr_corrs_anno %>%
   filter(A != "graft_blood" & B != "graft_blood") %>%
   left_join(tissue_annotations, by=c("A"="tissue")) %>%
   left_join(tissue_annotations, by=c("B"="tissue")) %>%
-  mutate(grp = ifelse(plotgroup.x==plotgroup.y, "Within", "Between")) 
+  mutate(grp = ifelse(between_within_groups.x==between_within_groups.y, "Within", "Between")) 
 
-# 
-# tissues_for_comparisons <- pt_comp_df_all %>% group_by(plotgroup.x, org) %>% filter(n_distinct(grp) > 1) %>% pull(plotgroup.x) %>% unique()
-# 
-# 
-# p_compare_within_between_A <- ggplot(pt_comp_df_all %>% filter(plotgroup.x %in% tissues_for_comparisons), aes(x=plotgroup.x, color=grp, group=interaction(plotgroup.x, grp), y=value)) + geom_boxplot(outlier.colour = NA) + geom_point(position = position_jitterdodge(jitter.height = 0, jitter.width = .1 )) + stat_compare_means() + labs(x="System", y="JSD", color="") + facet_grid(~org, scales = "free", space = "free_x")
-# p_compare_within_between_B <- ggplot(pt_comp_df_all %>% filter(!plotgroup.x %in% tissues_for_comparisons), aes(x=plotgroup.x, color=grp, group=interaction(plotgroup.x, grp), y=value)) + geom_boxplot(outlier.colour = NA) + geom_point(position = position_jitterdodge(jitter.height = 0, jitter.width = .1 )) + scale_color_discrete(guide="none") + labs(x="System", y="JSD", color="") +  facet_grid(~org, scales = "free", space = "free_x")
-# 
-# p_compare_within_between_A + p_compare_within_between_B + plot_layout(width=c(.5, .5), guides = "collect")
-
-# or 
-
+for (thisorg in c("Mouse", "Human")){
+  if (thisorg == "Mouse"){
+    thisdata <- pt_comp_df_all %>% 
+      filter(between_within_groups.x != "") %>% 
+      filter(org == thisorg) %>% 
+      filter(stype == "GvHD") 
+  } else{
+    thisdata <- pt_comp_df_all %>% 
+      filter(between_within_groups.x != "") %>% 
+      filter(org == thisorg)
+}
 # find all the tissues with within-group comparisons
-stat.test <- pt_comp_df_all %>%
-  filter(org != "Mouse") %>% 
-  group_by(plotgroup.x, stype) %>% 
+stat.test <- thisdata %>%
+  group_by(between_within_groups.x, stype) %>% 
   filter(n_distinct(grp) > 1) %>%
   rstatix::kruskal_test(value ~ grp) %>%
   adjust_pvalue(method = "BH") %>%
@@ -121,12 +120,13 @@ stat.test <- pt_comp_df_all %>%
   mutate(group1="Between",  group2="Within") %>%
   add_xy_position(x = "grp", dodge = 0.8)
 
-(p_between_within <- ggplot(pt_comp_df_all, aes(x=grp, color=grp, group=grp, y=value)) + 
+
+p_between_within <- ggplot(thisdata, aes(x=grp, color=grp, group=grp, y=value)) + 
   geom_boxplot(outlier.colour = NA) +
   geom_point(position = position_jitterdodge(jitter.height = 0, jitter.width = .1 )) + 
   labs(x="System", y="JSD", color="Comparisons") + 
-  facet_grid(stype~plotgroup.x, scales = "free", space = "free_x") +
-  scale_color_manual(values = c("forestgreen", "firebrick4"), breaks = c("Between", "Within"), labels=c("Between systems", "Within systems")) + 
+  facet_grid(stype~between_within_groups.x, scales = "free", space = "free_x") +
+  scale_color_manual(values = c("navy", "firebrick4"), breaks = c("Between", "Within"), labels=c("Between systems", "Within systems")) + 
   theme(legend.position = "bottom") + 
  scale_x_discrete(position = "top") +
 stat_pvalue_manual(
@@ -134,13 +134,13 @@ stat_pvalue_manual(
   ) + theme(
     axis.ticks.x=element_blank(), axis.text.x = element_blank(),
     ) +
-  gridExtra::tableGrob(tissue_annotations %>% select(plotgroup,  tissue) %>% distinct() %>% arrange(desc(plotgroup)), 
+  gridExtra::tableGrob(tissue_annotations %>% select(between_within_groups,  tissue) %>% distinct() %>% arrange(desc(between_within_groups)), 
                        theme = gridExtra::ttheme_minimal( base_size=7),
                        rows=NULL) + 
-  plot_layout(widths = c(8, 2)))
+  plot_layout(widths = c(8, 2))
 
-ggsave(p_between_within, filename = file.path(boxdir, "mouse_human_between_within.pdf"), width = 16, height = 8)
-
+ggsave(p_between_within, filename = file.path(boxdir, paste0("between_within_", thisorg, ".pdf")), width = 16, height = 8)
+}
 ```
 
 
@@ -158,7 +158,7 @@ between_weight <- weights %>% filter(grp=="Between") %>% pull(weight) %>% mean()
 ```
 
 
-The sampling was performed 100 times, and plotted below.  
+The sampling was performed 1000 times, and plotted below.  
 
 > To assess the stability of the comparisons within systems
 
@@ -166,50 +166,63 @@ The sampling was performed 100 times, and plotted below.
 ```{r 39-figureS11-5 }
 tissues_for_comparisons <- pt_comp_df_all %>%
   filter(org == "Human" ) %>% 
-  group_by(plotgroup.x, org) %>% filter(n_distinct(grp) > 1) %>% pull(plotgroup.x) %>% unique()
+  filter(between_within_groups.x != "") %>%
+  group_by(between_within_groups.x, org) %>% filter(n_distinct(grp) > 1) %>% pull(between_within_groups.x) %>% unique()
 
 reps = 1000
 
 pt_comp_df_all_shuff <- map(1:reps, .f=function(x){
   set.seed(x)
   pt_comp_df_all %>% 
-    filter(org == "Human" & stype == "GvHD") %>%
-    filter(plotgroup.x %in% tissues_for_comparisons) %>% 
-    group_by(plotgroup.x, org)  %>% 
-    mutate(shuffle=x, fauxgrp=sample(c("Within", "Between"), replace = TRUE, size = n(), prob = c(1-between_weight, between_weight)))
+    filter(org == "Human") %>% # stype == "GvHD") %>%
+    filter(between_within_groups.x != "") %>%
+    filter(between_within_groups.x %in% tissues_for_comparisons) %>% 
+    group_by(between_within_groups.x, org)  %>% 
+    mutate(
+      shuffle=x, 
+      fauxgrp=sample(c("Within", "Between"), replace = TRUE, size = n(), prob = c(1-between_weight, between_weight)))
 }) %>% bind_rows()
 
 # only plot the first 6 cause 100 is a bit excessive
-p_inv_shuff <-ggplot(pt_comp_df_all_shuff %>% filter(shuffle <7), aes(x=plotgroup.x, color=fauxgrp, group=interaction(plotgroup.x, fauxgrp), y=value)) + geom_boxplot(outlier.colour = NA) + geom_point(position = position_jitterdodge(jitter.height = 0, jitter.width = .1 )) + stat_compare_means() + facet_wrap(~shuffle, ncol = 2) + theme(axis.text.x = element_text(angle=90, hjust=1)) + labs(caption="Each facet is a replicate of randomly assigning the 'Within'/'Between' grouping to comparisons relating to a anatomic system. \nFirst 6 replicates shown for clarity." ) 
+p_inv_shuff <-ggplot(pt_comp_df_all_shuff %>% filter(shuffle <7), aes(x=between_within_groups.x, color=fauxgrp, group=interaction(between_within_groups.x, fauxgrp), y=value)) + geom_boxplot(outlier.colour = NA) + geom_point(position = position_jitterdodge(jitter.height = 0, jitter.width = .1 )) + stat_compare_means() + facet_wrap(~shuffle, ncol = 2) + theme(axis.text.x = element_text(angle=90, hjust=1)) + labs(caption="Each facet is a replicate of randomly assigning the 'Within'/'Between' grouping to comparisons relating to a anatomic system. \nFirst 6 replicates shown for clarity." ) 
 ggsave(p_inv_shuff, filename = file.path(boxdir, "shuffles_between_within_first_six.pdf"), width = 16, height = 10)
 
 
 
 shuff_summary <- pt_comp_df_all_shuff %>% 
-  group_by(plotgroup.x, shuffle) %>% 
+  group_by(between_within_groups.x, shuffle) %>% 
   rstatix::kruskal_test(value ~ fauxgrp) %>%
   adjust_pvalue(method = "BH")
 
+stat.test.allhuman <- pt_comp_df_all %>% 
+      filter(between_within_groups.x != "") %>% 
+      filter(org == thisorg) %>% 
+  group_by(between_within_groups.x) %>% 
+  filter(n_distinct(grp) > 1) %>%
+  rstatix::kruskal_test(value ~ grp) %>%
+  adjust_pvalue(method = "BH") %>%
+  add_significance("p.adj",
+                   cutpoints = c(0, 1e-04, 0.001, 0.01, 0.05, 1),
+                   symbols = c("****", "***", "**", "*", "ns")
+  ) %>%
+  mutate(group1="Between",  group2="Within") %>%
+  add_xy_position(x = "grp", dodge = 0.8)
 
 
 perm_test <- shuff_summary %>% 
-  left_join(stat.test %>% filter(stype!="noGvHD") %>% select(plotgroup.x, p.adj) %>% rename(true_p.adj=p.adj), by="plotgroup.x") %>% 
-  group_by(plotgroup.x, true_p.adj) %>% 
+  left_join(stat.test.allhuman %>% select(between_within_groups.x, p.adj) %>% rename(true_p.adj=p.adj), by="between_within_groups.x") %>% 
+  group_by(between_within_groups.x, true_p.adj) %>% 
   summarize(n=n(), n_less_than_true=sum(p <= true_p.adj)) %>%
   mutate(permuted_p_text = str_glue("{n_less_than_true} / {n}"))
 
-(p_shuff_summary <-   ggplot(shuff_summary, aes(y=plotgroup.x, group=plotgroup.x, x=p)) + 
+(p_shuff_summary <-   ggplot(shuff_summary, aes(y=between_within_groups.x, group=between_within_groups.x, x=p)) + 
     geom_violin(alpha=.2) +
     geom_jitter(width = 0, height=.1, alpha=.2, color="black") + 
-    geom_point(data=stat.test %>% filter(stype!="noGvHD"), aes(x=p.adj, y=plotgroup.x, color=plotgroup.x), shape=8, size=3, stroke=2) + 
+    geom_point(data=stat.test.allhuman, aes(x=p.adj, y=between_within_groups.x, color=between_within_groups.x), shape=8, size=3, stroke=2) + 
     scale_color_brewer(palette = "Dark2", guide="none") +
-    geom_text(data=perm_test, aes(x=ifelse(true_p.adj > .1, true_p.adj, .1), y=plotgroup.x, color=plotgroup.x, label=permuted_p_text), nudge_y = -.25)  +
+    geom_text(data=perm_test, aes(x=ifelse(true_p.adj > .1, true_p.adj, .1), y=between_within_groups.x, color=between_within_groups.x, label=permuted_p_text), nudge_y = -.25)  +
     labs(x="P-value", y="System",  title="System Permutations", caption=str_wrap("Asterisks show adjusted p-value of true system labels; black points points and violin outline show non-adjusted p-values of permutated system labels. Colored text shows number of tests equal to or less than the adjusted p-value for 1000 permutations.", width = 70)))
 
-ggplot(shuff_summary, aes(y=plotgroup.x, group=plotgroup.x, x=p, fil=plotgroup.x)) + 
-  geom_jitter(width = 0, height=.1, alpha=.2, color="black") + 
-  geom_point(data=stat.test %>% filter(stype!="noGvHD"), aes(x=p.adj, y=plotgroup.x, color=plotgroup.x), shape=8, size=3, stroke=2) + scale_color_brewer(palette = "Dark2", guide="none") +
-  labs(x="Adjusted P-value", y="System",  title="Shuffled-label tissue comparisons ")
 
 ggsave(p_shuff_summary, filename = file.path(boxdir, "shuffles_between_within_summary.pdf"), width = 5, height=5)
 
@@ -234,7 +247,7 @@ for (si in 1:length(sets_of_comparisons)){
   
   intestinal_comparison_data <-  pt_comp_df_all %>% 
     filter(stype=="GvHD") %>% 
-    mutate(intestinal = ifelse(plotgroup.x %in% s & plotgroup.y %in% s, "Within", "Between"))
+    mutate(intestinal = ifelse(between_within_groups.x %in% s & between_within_groups.y %in% s, "Within", "Between"))
   
   stat.test.intestinal <- intestinal_comparison_data %>%
     group_by(org, ) %>% 
